[package]
name = "v8_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
once_cell = "1.17.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
serde_v8 = "0.82.0"
tokio = { version = "1.25.0", features = ["rt"] }
v8 = "0.60.1"

